Opened 14 years ago
Closed 14 years ago
#1144 closed defect (fixed)
jpeg: crash with lowres and weird subsamples
| Reported by: | ami_stuff | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avcodec |
| Version: | git-master | Keywords: | mjpeg crash SIGSEGV |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Starting program: d:\mingw\msys\1.0\ffmpeg-head-4246032\ffmpeg_G.exe -vlowres 1
-i 422_22_21_12.jpg
[New Thread 2676.0xb2c]
ffmpeg version 0.9.1.git-4246032 Copyright (c) 2000-2012 the FFmpeg developers
built on Mar 22 2012 16:12:00 with gcc 4.6.1
configuration: --disable-ffprobe
libavutil 51. 44.100 / 51. 44.100
libavcodec 54. 12.100 / 54. 12.100
libavformat 54. 2.100 / 54. 2.100
libavdevice 53. 4.100 / 53. 4.100
libavfilter 2. 65.102 / 2. 65.102
libswscale 2. 1.100 / 2. 1.100
libswresample 0. 7.100 / 0. 7.100
Program received signal SIGSEGV, Segmentation fault.
0x005ddc41 in ff_mjpeg_decode_frame (avctx=0x397a2e0, data=0x22f6e8,
data_size=0x22f898, avpkt=0x22f658) at libavcodec/mjpegdec.c:1743
1743 line[index] = (line[index / 2] + line[(index + 1) / 2])
>> 1;
(gdb) bt
#0 0x005ddc41 in ff_mjpeg_decode_frame (avctx=0x397a2e0, data=0x22f6e8,
data_size=0x22f898, avpkt=0x22f658) at libavcodec/mjpegdec.c:1743
#1 0x004fb828 in avcodec_decode_video2 (avctx=0x397a2e0, picture=0x22f6e8,
got_picture_ptr=0x22f898, avpkt=0x22f850) at libavcodec/utils.c:1358
#2 0x00434f17 in try_decode_frame (st=0x3981120, avpkt=<optimized out>,
options=<optimized out>) at libavformat/utils.c:2263
#3 0x0043c777 in avformat_find_stream_info (ic=0x3972340, options=0x3981440)
at libavformat/utils.c:2568
#4 0x0040d985 in opt_input_file (o=0x22fdb8, opt=0x3980e17 "i",
filename=<optimized out>) at ffmpeg.c:3735
#5 0x00411d17 in parse_option (optctx=0x22fdb8, opt=<optimized out>,
arg=0x3980e19 "422_22_21_12.jpg", options=0xafc6c0) at cmdutils.c:300
#6 0x00411f7a in parse_options (optctx=0x22fdb8, argc=5,
argv=<optimized out>, options=0xafc6c0,
parse_arg_function=0x40ee28 <opt_output_file>) at cmdutils.c:333
#7 0x00a9fb4d in main (argc=5, argv=0x3980d80) at ffmpeg.c:5176
Attachments (1)
Change History (3)
by , 14 years ago
comment:1 by , 14 years ago
| Component: | undetermined → avcodec |
|---|---|
| Keywords: | mjpeg crash SIGSEGV added |
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
Note:
See TracTickets
for help on using tickets.



Patch sent.