Do not try to use lowres for unusual jpg subsampling.

Fixes ticket #1144.